# kokopelli-c

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.c  main.cpp
examples/: alien.lua  bearing.lua  castle.lua  clock.lua  gears.lua  mandala.lua
libfab/: CMakeLists.txt  asdf.c  asdf.h  asdf_cache.c  asdf_cache.h  asdf_cms.c  asdf_contour.c  asdf_distance.c  asdf_file_io.c  asdf_import.c  asdf_import.h  asdf_neighbors.c  asdf_render.c  asdf_render.h  asdf_triangulate.c  asdf_triangulate.h  cam_distance.c  cam_slices.c  cam_toolpath.c  formats_mesh.c  formats_mesh.h  formats_png_image.c  formats_png_image.h  formats_stl.c  tree.c  tree.h  tree_eval.c  tree_eval.h  tree_math_f.c  tree_math_i.c  tree_math_i.h  tree_math_r.c  tree_node.c  tree_node.h  tree_node_opcodes.c  tree_node_printers.c  tree_node_results.c  tree_node_results.h  tree_packed.c  tree_packed.h  (+8 more)
src/: _asdf.c  _asdf.h  _fabvars.c  _fabvars.h  _image.c  _image.h  _mathtree.c  _mathtree.h  _mesh.c  _mesh.h  _region.c  _region.h  _render.c  _render.h  _scheduler.c  _scheduler.h  _shape.c  _shape.h  common.h  glcanvas.c  glcanvas.h  pcb.h  pt.c  sds.c  table_ext.c  vec.h
